@@ -4861,7 +4861,11 @@ sub do_check_merge_target
 	if @check_tests;
 
     &depend ('.PHONY', 'check', 'check-am');
+    # Handle recursion.  We have to honor BUILT_SOURCES like for `all:'.
     $output_rules .= ("check: "
+		      . (variable_defined ('BUILT_SOURCES')
+			 ? "\$(BUILT_SOURCES)\n\t\$(MAKE) \$(AM_MAKEFLAGS)"
+			 : '')
 		      . (variable_defined ('SUBDIRS')
 			 ? 'check-recursive' : 'check-am')
 		      . "\n");
