@@ -49,6 +49,8 @@ canon4.test \
 canon5.test \
 ccnoco.test \
 check.test \
+check2.test \
+check3.test \
 checkall.test \
 clean.test \
 colneq.test \
