@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2001, 2002  Free Software Foundation, Inc.
+# Copyright (C) 2002  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -18,27 +18,52 @@
 # the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.
 
-# Test Automake style tests.
+# Make sure `check:' honors $(BUILT_SOURCES).
+# PR/359.
 
 . ./defs || exit 1
 
 set -e
 
-cat > Makefile.am << 'END'
-TESTS = frob.test
+cat >> configure.in << 'END'
+AC_CONFIG_FILES([dir/Makefile])
+AC_OUTPUT
 END
 
-: > frob.test
+mkdir dir
+
+cat > Makefile.am << 'END'
+BUILT_SOURCES = command1.inc
+SUBDIRS = dir
+TESTS = subrun.sh
+subrun.sh:
+	(echo '#! /bin/sh'; cat command1.inc) > $@
+	chmod +x $@
+command1.inc:
+	echo 'dir/echo.sh' > $@
+CLEANFILES = subrun.sh command1.inc
+END
+
+cat > dir/Makefile.am << 'END'
+BUILT_SOURCES = command2.inc
+check_SCRIPTS = echo.sh
+echo.sh:
+	(echo '#! /bin/sh'; cat command2.inc) > $@
+	chmod +x $@
+command2.inc:
+	echo 'echo Hello' > $@
+CLEANFILES = echo.sh command2.inc
+END
 
 $ACLOCAL
+$AUTOCONF
 $AUTOMAKE
-
-grep '^check-TESTS:' Makefile.in
-grep '^check-DEJAGNU' Makefile.in && exit 1
-
-# check-TESTS is phony.
-sed -n '/^\.PHONY:/,/^$/p' Makefile.in | grep check-TESTS
+./configure
+$MAKE check >stdout
+cat stdout
+grep 'PASS: subrun.sh' stdout
 
 # check should depend directly on check-am (similar tests are
-# in check2.test and check3.test).
-grep '^check: check-am' Makefile.in
+# in check.test and check2.test).
+$FGREP 'check: $(BUILT_SOURCES)' Makefile.in
+$FGREP 'check: $(BUILT_SOURCES)' dir/Makefile.in
