@@ -1,5 +1,13 @@
 2002-11-29  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	For PR automake/359:
+	* automake.in (do_check_merge_target): Make `check' dependent on
+	$(BUILT_SOURCES) if the variable is defined.  Run `check-am' or
+	`check-recursive' in a submake in this case.
+	* tests/check2.test, tests/check3.test: New files.
+	* tests/check.test: Make sure `check' depends on `check-am'.
+	* tests/Makefile.am (TESTS): Add check2.test and check3.test.
+
 	For PR automake/371 and PR automake/372:
 	* automake.in (rule_define): Honor inference rules with multiple
 	targets, and warn when they are used.
